add cors for gateway